linked my homepage to tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,6 +13,7 @@
     <p>i am working on my first portfolio.</p>
     <p>it is great to have you here.</p>
     <p>let's collaborate</p>
-    <a href="" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo"></a>
+    <a href="" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo" width="250px"></a>
+    <p><a href="tweets.html">My tweets</a></p>
 </body>
 </html>
