making both index.html and tweet.html have same structure

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,7 +6,15 @@
     <title>Timilehin</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
+          <h1>Hello World</h1>
     <h2>Welcome to My First Webpage</h2>
     <h3>Let's get started</h3>
     <p>My name is timilehin.</p>
@@ -15,5 +23,13 @@
     <p>let's collaborate</p>
     <a href="" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo" width="250px"></a>
     <p><a href="tweets.html">My tweets</a></p>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Made by Akinloye Timilehin - <a href="https://github.com/Teemax7" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
