--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,7 +31,7 @@
             <a href="index.html" target="_blank">project</a>
         </article>
     </section>
-    <section id="about me">
+    <section id="about">
         <h2>About Me</h2>
         <p>  I'm a passionate front-end developer with a strong background in creating intuitive, user-friendly 
              web designs. Over the past few years, I've gained experience working well with HTML, CSS, JavaScript 
